- Fixed bug in determining Course (if not afghan literacy, variable becomes None.
- Installed pytz because of Django 1.6 release notes: you must now install pytz to work with Sqlite3 if USE_TZ=True in your settings.py.
- Fixed a bug in uploadeXe/views.py def list() in finishing elp upload (wasn't redirecting to apt)
- Improved Code Coverage and bug fixes within. 

v0.9.4
- If elp id is not found in blocks, then the block will be marked as failed (still internally possible to bring it back to life, but to the user, it will fail.)
- Fixed register bug (template not found, was pointing to old template, updated)
- Fixed bug that throws 500 when checkeing statements with no School assigned.
- Fixed speed and Usage report bugs with views and htmls pages.

v0.9.3
- Updated blocks view to show updated date instead of published date.
- Fixed statement assignment to courses and blocks for multiple consecutive launched statements.

v0.9.2
- Fixed bugs
- Fixed API to match with eXe elp id scan in latest eXe build
- Tested with course publish and update against eXe
- Tested with course invitation and upadte against eXe and made necessary changes.
- Set logging to include User access to reporting and logging in and logging out.
- Set up logging such that these request go to the file logs/umclouddj.log

-Removed un needed print statements
-Fixed jenkins build script to sync db upon git pull and server setup.

v0.9.1
-Code comment, code clean, security enhancements and bug fixes
- Further code coverage and unit tests

v0.9.0
- Fixed /umlrs/statements on login giving error. (using string conversion as dict was being returned)
- Updated ADL_LRS fix for /statemetns/ 
- Updated development set up script to account for ADL_LRS cachced databases.
- Fixed exe_do export bug when elp file name isdiff from name in contentv3.xml. We get the name from the content xml.
- Fixed calculate_statement() bug of duplication.
- Fixed jQuery bug and div mismatch in base.html and reporting htmls